@@ -14,6 +14,7 @@ import org.apache.commons.exec.DefaultExecutor;
 import org.apache.commons.exec.ExecuteException;
 import org.evosuite.Properties;
 import org.evosuite.TestSuiteGenerator;
+import org.evosuite.classpath.ClassPathHandler;
 import org.evosuite.coverage.mutation.MutationPool;
 import org.evosuite.ga.Chromosome;
 import org.evosuite.ga.metaheuristics.GeneticAlgorithm;
@@ -39,27 +40,36 @@ public class SemanticsConflictWriter {
 	}// PrintWriter printer
 
 	private void write() {
-		run();
+//		run();
 //		LoggingUtils.changeLogbackFile("logback-evosuite.xml");
 		TestSuiteGenerator testSuiteGenerator = new TestSuiteGenerator();
 //		EvoSuite evosuite = new EvoSuite();
 		String targetClass = "neu.lab.Host.Host";// SemanticsConflictWriter.class.getCanonicalName();
 		Properties.getInstance();
-		Properties.CP = "C:\\Users\\Flipped\\eclipse-workspace\\Host\\target\\classes;C:\\Users\\Flipped\\eclipse-workspace\\Host\\target\\dependency\\A-1.0.jar;C:\\Users\\Flipped\\eclipse-workspace\\Host\\target\\dependency\\B-1.0.jar;C:\\Users\\Flipped\\eclipse-workspace\\Host\\evosuite-master-1.0.6.jar;C:\\Users\\Flipped\\eclipse-workspace\\Host\\evosuite-runtime-1.0.6.jar";
+		Properties.CP = "C:\\Users\\Flipped\\eclipse-workspace\\Host\\target\\classes;C:\\Users\\Flipped\\eclipse-workspace\\Host\\target\\dependency\\A-1.0.jar;C:\\Users\\Flipped\\eclipse-workspace\\Host\\target\\dependency\\B-1.0.jar;C:\\Users\\Flipped\\eclipse-workspace\\Host\\evosuite-runtime-1.0.6.jar;C:\\Users\\Flipped\\eclipse-workspace\\Host\\target\\dependency\\hamcrest-core-1.3.jar;C:\\Users\\Flipped\\eclipse-workspace\\Host\\target\\dependency\\junit-4.12.jar";
 //		ClassPathHandler.getInstance().setEvoSuiteClassPath(
 //				new String[] { "C:\\Users\\Flipped\\Desktop\\project\\javacpp-1.4.4\\evosuite-master-1.0.6.jar",
-//						"C:\\Users\\Flipped\\Desktop\\project\\javacpp-1.4.4\\evosuite-runtime-1.0.6.jar" });
+//						"C:\\Users\\Flipped\\Desktop\\project\\javacpp-1.4.4\\evosuite-runtime-1.0.6.jar",
+//						"C:\\Users\\Flipped\\eclipse-workspace\\Host\\target\\classes",
+//						"C:\\Users\\Flipped\\eclipse-workspace\\Host\\target\\dependency\\A-1.0.jar",
+//						"C:\\Users\\Flipped\\eclipse-workspace\\Host\\target\\dependency\\B-1.0.jar" });
 //		Properties.REGRESSIONCP = "C:\\Users\\Flipped\\Desktop\\project\\javacpp-1.4.4\\target\\classes";
 		Properties.TARGET_CLASS = targetClass;
+		Properties.TARGET_METHOD = "onStart";
 //		Properties.LOG_LEVEL = "error";
+		System.setProperty("java.class.path",
+				"C:\\Users\\Flipped\\eclipse-workspace\\Host\\target\\classes;C:\\Users\\Flipped\\eclipse-workspace\\Host\\target\\dependency\\A-1.0.jar;C:\\Users\\Flipped\\eclipse-workspace\\Host\\target\\dependency\\B-1.0.jar;C:\\Users\\Flipped\\eclipse-workspace\\Host\\evosuite-runtime-1.0.6.jar;C:\\Users\\Flipped\\eclipse-workspace\\Host\\target\\dependency\\hamcrest-core-1.3.jar;C:\\Users\\Flipped\\eclipse-workspace\\Host\\target\\dependency\\junit-4.12.jar");
 		System.setProperty("org.slf4j.simpleLogger.log.org.evosuite", "debug");
 		Properties.CLASSPATH = new String[] { "C:\\Users\\Flipped\\eclipse-workspace\\Host\\target\\classes",
 				"C:\\Users\\Flipped\\eclipse-workspace\\Host\\target\\dependency\\A-1.0.jar",
 				"C:\\Users\\Flipped\\eclipse-workspace\\Host\\target\\dependency\\B-1.0.jar" };
+		Properties.SOURCEPATH = new String[] { "C:\\Users\\Flipped\\eclipse-workspace\\Host\\target\\classes",
+				"C:\\Users\\Flipped\\eclipse-workspace\\Host\\target\\dependency\\A-1.0.jar",
+				"C:\\Users\\Flipped\\eclipse-workspace\\Host\\target\\dependency\\B-1.0.jar" };
 		TestGenerationResult result = testSuiteGenerator.generateTestSuite();
-		System.out.println(MutationPool.getMutants().get(0).getMutation().getFirst());
-		System.out.println(MutationPool.getMutants().get(0).getMutationName());
-		System.out.println(MutationPool.getMutants());
+//		System.out.println(MutationPool.getMutants().get(0).getMutation().getFirst());
+//		System.out.println(MutationPool.getMutants().get(0).getMutationName());
+//		System.out.println(MutationPool.getMutants());
 //		String[] paths = readFiles(".\\target\\dependency\\").toArray(new String[] {});
 //		String[] command = new String[] { "-generateSuite", "-class", targetClass };
 //		Set<String> test = new HashSet<String>();
@@ -72,10 +82,36 @@ public class SemanticsConflictWriter {
 //		Object result = evosuite.parseCommandLine(command);
 //		TestGenerationResult ga = getGAFromResult(result);
 //		TestSuiteChromosome test0 =  (TestSuiteChromosome) ga.getBestIndividual();
-		System.out.println(result.getTestCode("test0"));
+//		System.out.println(result.getTestCode("test0"));
 	}
 
 	public static void main(String[] args) {
+//		String properties = System.getProperty("java.library.path");
+//		String[] paths = properties.split(";");
+//		String mvn = "";
+//		for (String path : paths) {
+//			if (path.contains("maven")) {
+//				System.out.println(path);
+//				mvn = path + "\\mvn.cmd ";
+//			}
+//		}
+//		System.out.println(properties);
+		SemanticsConflictWriter sSemanticsConflictWriter = new SemanticsConflictWriter();
+		sSemanticsConflictWriter.write();
+//		CommandLine command = CommandLine.parse(mvn + "-version");
+//		DefaultExecutor executor = new DefaultExecutor();
+//		try {
+//			executor.execute(command);
+//		} catch (ExecuteException e) {
+//			// TODO Auto-generated catch block
+//			e.printStackTrace();
+//		} catch (IOException e) {
+//			// TODO Auto-generated catch block
+//			e.printStackTrace();
+//		}
+	}
+
+	public void run() {
 		String properties = System.getProperty("java.library.path");
 		String[] paths = properties.split(";");
 		String mvn = "";
@@ -86,9 +122,9 @@ public class SemanticsConflictWriter {
 			}
 		}
 		System.out.println(properties);
-//		SemanticsConflictWriter sSemanticsConflictWriter = new SemanticsConflictWriter();
-//		sSemanticsConflictWriter.write();
-		CommandLine command = CommandLine.parse(mvn+"-version");
+//	SemanticsConflictWriter sSemanticsConflictWriter = new SemanticsConflictWriter();
+//	sSemanticsConflictWriter.write();
+		CommandLine command = CommandLine.parse(mvn + "-version");
 		DefaultExecutor executor = new DefaultExecutor();
 		try {
 			executor.execute(command);
@@ -100,31 +136,7 @@ public class SemanticsConflictWriter {
 			e.printStackTrace();
 		}
 	}
-public void run() {
-	String properties = System.getProperty("java.library.path");
-	String[] paths = properties.split(";");
-	String mvn = "";
-	for (String path : paths) {
-		if (path.contains("maven")) {
-			System.out.println(path);
-			mvn = path + "\\mvn.cmd ";
-		}
-	}
-	System.out.println(properties);
-//	SemanticsConflictWriter sSemanticsConflictWriter = new SemanticsConflictWriter();
-//	sSemanticsConflictWriter.write();
-	CommandLine command = CommandLine.parse(mvn+"-version");
-	DefaultExecutor executor = new DefaultExecutor();
-	try {
-		executor.execute(command);
-	} catch (ExecuteException e) {
-		// TODO Auto-generated catch block
-		e.printStackTrace();
-	} catch (IOException e) {
-		// TODO Auto-generated catch block
-		e.printStackTrace();
-	}
-}
+
 	@SuppressWarnings("unchecked")
 	private TestGenerationResult getGAFromResult(Object result) {
 		List<List<TestGenerationResult>> results = (List<List<TestGenerationResult>>) result;
